# kiln

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  imgui.ini  kiln.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/dev_guide/: architecture.md  env_bundle_mapping.md  extending_env_bundles.md  index.md
docs/javascripts/: mermaid-init.js
docs/reference/: actors.md  envio.md  genesis.md  index.md  ui.md
docs/user_guide/: env_bundles.md  examples.md  genesis_backends.md  index.md  installation.md  ui_workflow.md
examples/: genesis_bundle_demo.py  genesis_demo.py  genesis_xml_demo.py
examples/env_bundles/basic_v1/: env.json  env.xml  scene.usda
kiln/: api.py  config.py  constants.py  scene.py
kiln/actors/: __init__.py  actions.py  base.py  car.py  components.py  npc.py  pathfinding.py
kiln/assets/: cube.usda  plane.usda
kiln/envio/: __init__.py  bundle.py  export.py  runtime.py  xml_bundle.py
kiln/objects/: __init__.py  base_object.py  box.py  cube.py  plane.py
kiln/sim/: __init__.py
kiln/sim/genesis/: __init__.py  sim.py
kiln/ui/: hierarchy.py  library.py  project_screen.py  properties.py  viewport.py  welcome_screen.py
src/: config.h  main.cpp
src/renderer/: camera.cpp  camera.h  scene_renderer.cpp  scene_renderer.h
src/scene/: scene.cpp  scene.h
src/scene/primitives/: plane_tool.cpp  plane_tool.h  primitive_tool.h
src/screens/: project_screen.cpp  project_screen.h  screen.h  welcome_screen.cpp  welcome_screen.h
src/ui/dialogs/: dialog.h  new_folder_dialog.h  new_scene_dialog.h
src/ui/screens/: project_screen.cpp  project_screen.h  welcome_screen.cpp  welcome_screen.h
tests/: test_export_mjcf.py  test_xml_bundle_actors.py
