[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiln"
version = "0.1.0"
description = "A studio for creating reinforcement learning environments with high-fidelity simulation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "PyQt6>=6.5",
  "qdarkstyle>=3.2",
  "PyOpenGL>=3.1.6",
  "PyOpenGL_accelerate>=3.1.6",
]

[project.optional-dependencies]
# USD support for scene authoring/preview in the UI.
usd = ["usd-core>=24.0"]

# Genesis simulation backend (PyTorch must be installed separately per Genesis docs).
sim = ["genesis-world>=0.3.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kiln*"]


